--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch-server": "watch-server"
   },
   "dependencies": {
-    "@croquet/microverse-library": "0.3.6"
+    "microverse-library": "../microverse-library"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
